--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is a simple blockchain project.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest -c jest.config.json",
+    "search-circular-dependencies": "npx madge -c ./index.js ./src"
   },
   "repository": {
     "type": "git",
@@ -31,5 +32,11 @@
     "madge": "^5.0.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.0"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1",
+    "fastify": "^3.27.4",
+    "lodash": "^4.17.21",
+    "uuid": "^8.3.2"
   }
 }
