--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "url": "https://github.com/yusufshakeel/blockchain-project/issues"
   },
   "homepage": "https://github.com/yusufshakeel/blockchain-project#readme",
+  "engines": {
+    "node": ">11.0.0"
+  },
   "devDependencies": {
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -37,8 +40,12 @@
     "prettier": "^2.6.0"
   },
   "dependencies": {
+    "arecibo": "^2.0.0",
     "crypto-js": "^4.1.1",
     "fastify": "^3.27.4",
+    "fastify-swagger": "^5.0.0",
+    "http-status-codes": "^2.2.0",
+    "json-schema-ref-parser": "^9.0.9",
     "lodash": "^4.17.21",
     "uuid": "^8.3.2"
   }
