--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,7 +30,10 @@
       {
         "allow": [
           "time",
-          "timeEnd"
+          "timeEnd",
+          "error",
+          "info",
+          "log"
         ]
       }
     ],
