--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a simple blockchain project.",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "jest -c jest.config.json",
     "search-circular-dependencies": "npx madge -c ./index.js ./src",
     "lint": "npx eslint -c .eslintrc.json src test",
