--- a/jest.config.json
+++ b/jest.config.json
@@ -7,6 +7,7 @@
   "collectCoverageFrom": [
     "**/*.{js,jsx}",
     "!**/coverage/**",
+    "!**/output/**",
     "!**/docs/**",
     "!**/node_modules/**",
     "!**/test/**",
