wallet controller, routes, test

--- a/jest.config.json
+++ b/jest.config.json
@@ -11,6 +11,7 @@
     "!**/docs/**",
     "!**/node_modules/**",
     "!**/test/**",
+    "!**/src/scripts/**",
     "!index.js"
   ],
   "coverageThreshold": {
