--- a/services/wallet/package.json
+++ b/services/wallet/package.json
@@ -4,6 +4,7 @@
   "description": "This is a simple blockchain project.",
   "main": "index.js",
   "scripts": {
+    "bootstrap": "mkdir -p output && npm run create-wallets",
     "create-wallets": "node src/scripts/create-wallets.js",
     "start": "nodemon index.js",
     "test": "jest -c jest.config.json",
