--- a/services/miner/package.json
+++ b/services/miner/package.json
@@ -47,6 +47,7 @@
     "http-status-codes": "^2.2.0",
     "json-schema-ref-parser": "^9.0.9",
     "lodash": "^4.17.21",
+    "mongoose": "^6.2.8",
     "uuid": "^8.3.2"
   }
 }
