--- a/services/miner/package.json
+++ b/services/miner/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "arecibo": "^2.0.0",
+    "cron": "^1.8.2",
     "fastify": "^3.27.4",
     "fastify-swagger": "^5.0.0",
     "http-status-codes": "^2.2.0",
