--- a/docs/blockchain-project.postman_environment.json
+++ b/docs/blockchain-project.postman_environment.json
@@ -7,9 +7,15 @@
 			"value": "http://localhost:10101",
 			"type": "default",
 			"enabled": true
+		},
+		{
+			"key": "DOMAIN_URL_WALLE",
+			"value": "http://localhost:10102",
+			"type": "default",
+			"enabled": true
 		}
 	],
 	"_postman_variable_scope": "environment",
-	"_postman_exported_at": "2022-03-23T15:59:20.236Z",
-	"_postman_exported_using": "Postman/9.14.0"
+	"_postman_exported_at": "2022-03-29T03:52:37.339Z",
+	"_postman_exported_using": "Postman/9.15.2"
 }
