--- a/docs/blockchain-project.postman_environment.json
+++ b/docs/blockchain-project.postman_environment.json
@@ -3,19 +3,37 @@
 	"name": "blockchain-project",
 	"values": [
 		{
-			"key": "DOMAIN_URL",
+			"key": "DOMAIN_URL_EXCHANGE",
 			"value": "http://localhost:10101",
 			"type": "default",
 			"enabled": true
 		},
 		{
-			"key": "DOMAIN_URL_WALLE",
+			"key": "DOMAIN_URL_WALLET",
 			"value": "http://localhost:10102",
 			"type": "default",
+			"enabled": true
+		},
+		{
+			"key": "DOMAIN_URL_TRANSACTION",
+			"value": "http://localhost:10103",
+			"type": "default",
+			"enabled": true
+		},
+		{
+			"key": "orderId",
+			"value": "",
+			"type": "any",
+			"enabled": true
+		},
+		{
+			"key": "orderNumber",
+			"value": "",
+			"type": "any",
 			"enabled": true
 		}
 	],
 	"_postman_variable_scope": "environment",
-	"_postman_exported_at": "2022-03-29T03:52:37.339Z",
-	"_postman_exported_using": "Postman/9.15.2"
+	"_postman_exported_at": "2022-04-28T17:06:30.458Z",
+	"_postman_exported_using": "Postman/9.16.0"
 }
