--- a/app/desktop/electron-app/package.json
+++ b/app/desktop/electron-app/package.json
@@ -66,6 +66,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "electron-window-state": "^5.0.3"
+    "electron-window-state": "^5.0.3",
+    "uuid": "^8.3.2"
   }
 }
