--- a/services/exchange/package.json
+++ b/services/exchange/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.27.2",
     "cron": "^1.8.2",
     "fastify": "^3.27.4",
+    "fastify-cors": "^6.1.0",
     "fastify-swagger": "^5.0.0",
     "http-status-codes": "^2.2.0",
     "json-schema-ref-parser": "^9.0.9",
